--- a/select-table.html
+++ b/select-table.html
@@ -12,9 +12,10 @@
         <main>
             <form action="">
                 <h3>Select your table</h3>
+                <video></video>
             </form>
         </main>
         <!-- <script type="module" src="/index.js"></script> -->
-        <script type="module" src="./scripts/select-table/index.js"></script>
+        <script type="module" src="/scripts/select-table/index.js"></script>
     </body>
 </html>
