--- a/select-table.html
+++ b/select-table.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en" data-theme="dark">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,6 +9,7 @@
     <body id="form_body" class="is-dark">
         <!-- <a class="back" href="index.html"></a>
         <div class="logo"></div> -->
+        <video class="video-feed"></video>
         <header class="process-header">
             <nav class="process-navigation">
                 <ul class="process-navigation__list">
