--- a/index.html
+++ b/index.html
@@ -55,9 +55,35 @@
         <header class="header">
             <img class="header__logo" src="./logo_foobar.svg" alt="FooBar logo" />
             <div class="header__user welcome js-welcome">
-                <h1 class="welcome__title">Welcome! Your table is</h1>
-                <span class="welcome__table-number">#4</span>
-                <button class="welcome__button">Change table</button>
+                <!-- <h1 class="welcome__title scanner-title">Welcome to FooBar!</h1> -->
+                <span class="welcome__table scanner-subtitle">
+                    <svg
+                        class="welcome__icon"
+                        height="28"
+                        width="48"
+                        xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink"
+                        viewBox="0 0 214.5 205.1"
+                    >
+                        <path
+                            d="M121.2,190.3h-6.6v-65.4h38.9c4,0,7.3-3.3,7.3-7.3s-3.3-7.3-7.3-7.3H61.1c-4,0-7.3,3.3-7.3,7.3s3.3,7.3,7.3,7.3H100v65.4
+			h-6.6c-4,0-7.3,3.3-7.3,7.3s3.3,7.3,7.3,7.3h27.8c4,0,7.3-3.3,7.3-7.3C128.4,193.6,125.2,190.3,121.2,190.3z"
+                        />
+                        <path
+                            d="M73.8,156.5c0-4-3.3-7.3-7.3-7.3H54.8H34.2c-11.1,0-13.4-16.1-13.5-16.9l-6.2-45c-0.6-4-4.2-6.7-8.2-6.2s-6.8,4.2-6.2,8.2
+			l6.2,45.1c0.8,6.5,4.2,16.6,11.4,23.1l-7.5,39c-0.8,3.9,1.8,7.8,5.8,8.5c3.9,0.8,7.8-1.8,8.5-5.8l6.8-35.3h17.6l6.8,35.3
+			c0.7,3.5,3.7,5.9,7.1,5.9c0.5,0,0.9,0,1.4-0.1c3.9-0.8,6.5-4.6,5.8-8.5l-6.3-32.6h2.9C70.5,163.8,73.8,160.5,73.8,156.5z"
+                        />
+                        <path
+                            d="M208.3,81.1c-4-0.5-7.6,2.2-8.2,6.2l-6.2,45.2c-0.1,0.7-2.4,16.8-13.5,16.8h-20.6H148c-4,0-7.3,3.3-7.3,7.3
+			s3.3,7.3,7.3,7.3h2.9l-6.3,32.6c-0.8,3.9,1.8,7.8,5.8,8.5c3.9,0.8,7.8-1.8,8.5-5.8l6.8-35.3h17.6l6.8,35.3
+			c0.7,3.5,3.7,5.9,7.1,5.9c0.5,0,0.9,0,1.4-0.1c3.9-0.8,6.5-4.6,5.8-8.5l-7.5-39c7.2-6.5,10.5-16.6,11.4-23.1l6.2-45.1
+			C215,85.3,212.2,81.6,208.3,81.1z"
+                        />
+                    </svg>
+                    <span class="welcome__table-number">#4</span>
+                </span>
+                <!-- <button class="welcome__button">Change table</button> -->
             </div>
             <div class="header__help-button help_logo">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40">
@@ -469,12 +495,32 @@ c0-0.6-0.4-1-1-1H9c-0.6,0-1,0.4-1,1v7H5v-8.4l7-7.2l7,7.2V20z"
                 <div class="overlay__shadow-right"></div>
                 <div class="overlay__shadow-bottom">
                     <div class="overlay__bottom-content">
-                        <a class="manually-link" href="#">Enter code manually</a>
+                        <button data-modal="enter-qr-manually" class="manually-link">Enter code manually</button>
                     </div>
                 </div>
                 <div class="overlay__shadow-left"></div>
             </div>
         </section>
+
+        <div data-modal="table-success" class="modal is-hidden">
+            <img class="modal__icon" src="#" alt=" " />
+            <h2 class="scanner-title modal__title"></h2>
+            <h3 class="scanner-subtitle modal__subtitle"></h3>
+            <button type="button" class="modal__button"></button>
+        </div>
+
+        <div data-modal="table-error" class="modal is-hidden">
+            <img class="modal__icon" src="#" alt=" " />
+            <h2 class="scanner-title modal__title"></h2>
+            <h3 class="scanner-subtitle modal__subtitle"></h3>
+            <button type="button" class="modal__button"></button>
+        </div>
+
+        <div data-modal="enter-qr-manually" class="modal is-hidden">
+            <label class="scanner-title" for="qr-manually">Enter table code</label>
+            <input id="qr-manually" name="qr-manually" type="text" maxlength="4" />
+            <button type="button" class="modal__button"></button>
+        </div>
 
         <template class="t-modal">
             <div class="modal">
