mobile nav only showing on beer board

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </svg>
             </div>
         </header>
-        <nav class="menubar">
+        <nav class="menubar is-hidden">
             <button class="help_icon menubar_button_styling">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="46" height="46">
                     <g data-name="Layer 2">
